<resources>
    <string name="app_name">Module6</string>
    <string name="code_challenge_3_9">Code challenge 3 and 9 (transfer data to fragments - budle + override)</string>
    <string name="demo_display_fragment_title">demo display fragment title</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_fragment_in_action">my fragment in action</string>
    <string name="title_with_fragment_activity">WithFragmentActivity</string>
    <string name="pass_this_data_to_activity">pass this data to activity</string>
    <string name="pass_this_data_to_fragment">pass this data to fragment</string>
    <string name="send_datas">Send datas</string>
    <string name="required">required</string>
    <string name="my_bonus_training_task">BONUS Training task for Fragments</string>
    <string name="homework">the homework</string>
    <string name="code_challenge_6_7">Code challenge 6 and 7 ((navigation drawer + fragments)</string>
    <string name="code_challenge_8">Code challenge 8 (tab layouts + fragments)</string>
    <string name="title_activity_code_challenge6">Code Challenge 6</string>
    <string name="title_activity_code_challenge4">Code Challenge 4</string>
    <string name="title_activity_code_challenge5">Code Challenge 5</string>
    <string name="title_activity_code_challenge8">Code Challenge 8</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="clicked_import">You clicked on Import</string>
    <string name="clicked_gallery">You clicked on Gallery</string>
    <string name="clicked_slideshow">You clicked on SlideShow</string>
    <string name="clicked_tools">You clicked on Tools</string>
    <string name="clicked_share">You clicked on Share</string>
    <string name="clicked_send">You clicked on Send</string>
    <string name="this_is_import_fragment">This is <b>IMPORT</b> fragment</string>
    <string name="this_is_gallery_fragment">This is <b>GALLERY</b> fragment</string>
    <string name="this_is_slideshow_fragment">This is <b>SLIDESHOW</b> fragment</string>
    <string name="this_is_tools_fragment">This is <b>TOOLS</b> fragment</string>
    <string name="this_is_share_fragment">This is <b>SHARE</b> fragment</string>
    <string name="this_is_send_fragment">This is <b>SEND</b> fragment</string>
    <string name="code_challenge_4">Code challenge 4 (transfer data to fragments - methods)</string>
    <string name="code_challenge_5">Code challenge 5 (transfer data to fragments - interface)</string>
    <string name="num_a">num A</string>
    <string name="num_b">num B</string>
    <string name="send_results">Send results</string>
    <string name="send_addiction">Send addiction</string>
    <string name="send_substraction">Send substraction</string>
    <string name="fill_a_number">fill a number</string>
    <string name="the_addiction_is">The addiction is:</string>
    <string name="the_substraction_is">The substraction is:</string>
    <string name="fragment_to_display_results">Fragment to display <b>results</b></string>
    <string name="send_text">Send text</string>
    <string name="enter_a_text">enter a text</string>
    <string name="your_text_will_be_displayed_here">your <b>text</b> will be displayed here</string>
    <string name="fill_a_text">fill a text</string>
    <string name="title_activity_challenge8">Challenge 8: TABBED</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="the_walking_dead">The Walking Dead</string>
    <string name="potato_moussaka">Potato moussaka</string>
    <string name="favorite_movie">Favorite Movie</string>
    <string name="favorite_pet">Favorite Pet</string>
    <string name="favorite_food">Favorite food</string>
    <string name="babarusi_cristian">Babarusi Cristian</string>
</resources>
