<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/all_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/the_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="@dimen/space_16"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <Button
                android:id="@+id/button_code_challenge_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/code_challenge_3_9" />

            <Button
                android:id="@+id/button_code_challenge_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/code_challenge_4" />

            <Button
                android:id="@+id/button_code_challenge_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/code_challenge_5" />

            <Button
                android:id="@+id/button_code_challenge_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/code_challenge_6_7" />

            <Button
                android:id="@+id/button_code_challenge_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/code_challenge_8" />

        </LinearLayout>

        <EditText
            android:id="@+id/edit_text_pass_to_activity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/pass_this_data_to_activity"
            android:inputType="textPersonName"
            android:textSize="@dimen/font_16"
            app:layout_constraintBottom_toTopOf="@+id/edit_text_pass_to_fragment"
            app:layout_constraintEnd_toStartOf="@+id/button_send_datas"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edit_text_pass_to_fragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/pass_this_data_to_fragment"
            android:inputType="textPersonName"
            android:textSize="@dimen/font_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_send_datas"
            app:layout_constraintStart_toStartOf="@+id/edit_text_pass_to_activity" />

        <Button
            android:id="@+id/button_send_datas"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:text="@string/send_datas"
            app:layout_constraintBottom_toBottomOf="@+id/edit_text_pass_to_fragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edit_text_pass_to_activity" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/my_bonus_training_task"
            android:textStyle="italic|bold"
            app:layout_constraintBottom_toTopOf="@+id/edit_text_pass_to_activity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/module6_logo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/homework"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>
